# Caohoc2024_Thesis_Multi_Agent_Trading_Framework

./: .claudeignore  .env.example  .gitignore  24007795 - Nguyễn Thị Quý - Đề cương luận văn.docx  CLAUDE.md  DATA_PULLER_GUIDE.md  DATA_STRUCTURE.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  MVP_README.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICKSTART_MVP.md  README.md  THESIS_SUMMARY.md  demo_mvp.py  pyproject.toml  requirements.txt  run_data_puller.py
config/: config.example.yaml
docs/: README.md
document/slide/: SCRIPT THUYẾT TRÌNH.docx
research/: README.md
src/: README.md  __init__.py
src/agents/: __init__.py  base.py  fundamental_agent.py  risk_agent.py  sentiment_agent.py  technical_agent.py
src/data/: README.md  __init__.py  data_config.py  vn30_puller.py
src/kg/: __init__.py  retriever.py
src/reasoning/: __init__.py  debate.py
tests/: __init__.py  conftest.py
